<resources>
    <string name="app_name">Android RPLBO</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome">Selamat Datang</string>
    <string name="j_admin">admin</string>
    <string name="d_menu">Silahkan Pilih Menu dibawah</string>
    <string name="admin">Admin</string>
    <string name="exit">Keluar Aplikasi</string>
    <string name="homestay">Homestay</string>
    <string name="wisata">Wisata</string>
    <string name="restaurant">Restaurant</string>
    <string name="hotel">Hotel</string>
    <string name="username">Username</string>
    <string name="masukan_username">Masukan username</string>
    <string name="password">Password</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="login_admin">Login Admin</string>
    <string name="logout">Logout</string>
    <string name="nama_homestay">Nama Homestay</string>
    <string name="deskripsi_homestay">Deskripsi Homestay</string>
    <string name="login">Login</string>
    <string name="copyright_pariwisata_2019">Copyright Pariwisata @2019</string>
    <string name="apakah_anda_admin">Apakah Anda Admin?</string>
    <string name="selamat_datang_di_aplikasi">Selamat Datang Di aplikasi</string>
    <string name="dinas_pariwisata_dan_kebudayaan">Dinas Pariwisata dan Kebudayaan</string>
    <string name="kota_pekanbaru">Kota Pekanbaru</string>
    <string name="mau_kemana_hari_ini">Mau Kemana Hari Ini?</string>
    <string name="selamat_datang_dipekanbaru">Selamat Datang Dipekanbaru</string>
    <string name="masuk">Masuk</string>
    <string name="detail"><![CDATA[Detail ->]]></string>
    <string name="tvabou01">Kota Pekanbaru adalah ibu kota dan kota terbesar</string>
    <string name="tvabou02">di Provinsi Riau, Indonesia. Kota ini merupakan salah</string>
    <string name="tvabou03">satu sentra ekonomi terbesar di bagian timur Pulau</string>
    <string name="tvabou04">Sumatera, dan termasuk sebagai kota dengan tingkat</string>
    <string name="tvabou05">pertumbuhan, migrasi dan urbanisasi yang tinggi.</string>
    <string name="profil_aplikasi">Profile Aplikasi</string>
    <string name="deskripsi">   Kota Pekanbaru adalah ibu kota dan kota terbesar di Provinsi Riau, Indonesia. Kota ini merupakan salah satu sentra ekonomi terbesar di bagian timur Pulau Sumatera, dan termasuk sebagai kota dengan tingkat pertumbuhan, migrasi dan urbanisasi yang tinggi.</string>
    <string name="todo">TODO</string>
    <string name="temukan_kami">Temukan Kami</string>
    <string name="nomor_hp">0822-8571-3200</string>
    <string name="email_dinas">dinaspariwisata@riau.co.id</string>
    <string name="alamat_dinas">Jalan Arifin Ahmad No. 39, Tengkerang Barat, Marpoyan Damai, Kota Pekanbaru, Riau 28289</string>
    <string name="navigasi">Petunjuk Arah</string>
    <string name="w_konvensional">Wisata Konvensional</string>
    <string name="more">Selengkapnya > </string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="masukan_gambar_berupa_alamat">Masukan Gambar Berupa alamat</string>
    <string name="gambar_harus_berupa_alamat_contoh">Gambar Harus Berupa Alamat gambar dan memiliki format dibelakang alamatnya Contoh :</string>
    <string name="deskripsi_wisata">Deskripsi Wisata</string>
    <string name="alamat_wisata">Alamat Wisata</string>
    <string name="nomor_telefon">Nomor Telefon</string>
    <string name="koordinat_googlemaps">Koordinat GoogleMaps</string>
    <string name="contoh">Contohnya seperti ini : </string>
    <string name="help_koordinat">Dan ambil koordinatnya saja seperti ini : 0.5080466,101.5101206</string>
    <string name="simpan">Simpan</string>
    <string name="keluar">Keluar</string>
    <string name="silahkan_pilih_data_yang_ingin_dirubah">Silahkan Pilih Data Yang Ingin dirubah</string>
    <string name="email1">Email</string>
    <string name="w_religi">Wisata Religi</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="ubah">Ubah</string>
    <string name="nonaktifkan">NonAktifkan</string>
    <string name="res">Restoran</string>
    <string name="cari">Cari</string>
    <string name="alamat_homestay">Alamat Homestay</string>
    <string name="n_restoran">Nama Restoran</string>
    <string name="pilih_kategori_yang_diinginkan">Pilih Kategori Yang Anda Diinginkan</string>
    <string name="informasi_pariwisata">Informasi Pariwisata</string>
</resources>
