<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.admin.homestay.TambahHomestayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/nama_homestay"
                android:id="@+id/etNamaHomestay001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/masukan_gambar_berupa_alamat"
                android:layout_below="@+id/etNamaHomestay001"
                android:id="@+id/etGambarHomestay001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvContoh"
                android:textColor="#F44336"
                android:text="@string/gambar_harus_berupa_alamat_contoh"
                android:layout_below="@+id/etGambarHomestay001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/ivContoh"
                android:layout_marginBottom="20dp"
                android:src="@drawable/contoh"
                android:layout_below="@+id/tvContoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/ivContoh"
                android:id="@+id/etDeskripsiH001"
                android:hint="@string/deskripsi_homestay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/alamat_homestay"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/etDeskripsiH001"
                android:id="@+id/etAlamatH001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/nomor_telefon"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/etAlamatH001"
                android:id="@+id/etNotelpH001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/koordinat_googlemaps"
                android:layout_below="@id/etNotelpH001"
                android:id="@+id/etGoogleMapsH001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvContoh2"
                android:textColor="#F44336"
                android:layout_below="@+id/etGoogleMapsH001"
                android:text="@string/contoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/contoh2"
                android:layout_below="@+id/tvContoh2"
                android:id="@+id/ivContoh2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="20dp"
                android:id="@+id/tvKoodinat"
                android:textColor="#F44336"
                android:text="@string/help_koordinat"
                android:layout_below="@+id/ivContoh2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginBottom="40dp"
                android:layout_below="@+id/tvKoodinat"
                android:id="@+id/etEmailH001"
                android:hint="@string/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnKirimH001"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/etEmailH001"
                android:text="@string/simpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_below="@id/btnKirimH001"
                android:visibility="visible"
                android:id="@+id/tvIDNon001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>