<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.admin.homestay.UbahHomestayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/nama_wisata"
                android:id="@+id/etNamaWisataHE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/masukan_gambar_berupa_alamat"
                android:layout_below="@+id/etNamaWisataHE"
                android:id="@+id/etGambarWisataHE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvContoh"
                android:textColor="#F44336"
                android:text="@string/gambar_harus_berupa_alamat_contoh"
                android:layout_below="@+id/etGambarWisataHE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/ivContohE"
                android:layout_marginBottom="20dp"
                android:src="@drawable/contoh"
                android:layout_below="@+id/tvContoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/ivContohE"
                android:id="@+id/etDeskripsiHE"
                android:hint="@string/deskripsi_wisata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/alamat_wisata"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/etDeskripsiHE"
                android:id="@+id/etAlamatHE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/nomor_telefon"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/etAlamatHE"
                android:id="@+id/etNotelpHE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/koordinat_googlemaps"
                android:layout_below="@id/etNotelpHE"
                android:id="@+id/etGoogleMapsHE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvContoh2"
                android:textColor="#F44336"
                android:layout_below="@+id/etGoogleMapsHE"
                android:text="@string/contoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/contoh2"
                android:layout_below="@+id/tvContoh2"
                android:id="@+id/ivContoh2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="20dp"
                android:id="@+id/tvKoodinat"
                android:textColor="#F44336"
                android:text="@string/help_koordinat"
                android:layout_below="@+id/ivContoh2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginBottom="40dp"
                android:layout_below="@+id/tvKoodinat"
                android:id="@+id/etEmailHE"
                android:hint="@string/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnKirimHE"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/etEmailHE"
                android:text="perbarui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvNonAktif2"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvIdHE"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>